--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,6 +6,8 @@
     <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
     sample application.
   </h2>
+  <h3>Привет Женько!!!
+  </h3>
 
   <%= link_to "Регистрация", signup_path, class: "btn btn-large btn-primary" %>
 </div>
